<resources>
    <string name="app_name">Weather_GB</string>
    <string name="moscow">Москва</string>
    <string name="feel_as">Ощущается как:</string>
    <string name="_23">+23</string>
    <string name="lt_ln_215121212">lt/ln 215121212</string>
    <string name="temp">Температура</string>
    <string name="_15">+15</string>
    <string name="changeregion">ChangeRegion</string>
    <string name="cityname">CityName</string>
    <string name="reload">Reload</string>

</resources>